Added Unary Sub. ArrayList changed to ArrayDeque.